Removing Service Bus Key

--- a/GatewayRequestApi/appsettings.Development.json
+++ b/GatewayRequestApi/appsettings.Development.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=DADS-LENOVO-LAP\\SQLEXPRESS;Database=Gateway;Integrated Security=True;User ID=DADS-LENOVO-LAP\\thoma;MultipleActiveResultSets=false;TrustServerCertificate=True;"
     "DefaultConnection": "Data Source={#host};Database={#dbName};Integrated Security=False;User ID=sa;Password={#dbPassword};MultipleActiveResultSets=false;TrustServerCertificate=True;",
-    "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qkBjKbAm53hXoA4h36Keg2QdRssYUOvJR+ASbIOzGfo="
+    "EventBus": "-------------------------Azure ServiceBus Key---------------------------"
   },
   "EventBus": {
     "ProviderName": "ServiceBus", //"RabbitMQ",
