Update to Serilog config
- enabling cross application log searches by new naming convention

--- a/GatewayRequestApi/appsettings.Development.json
+++ b/GatewayRequestApi/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Elasticsearch" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://gateway-elasticsearch:9200",
+          "indexFormat": "gateway-requestApi-logs-{0:yyyy.MM.dd}",
+          "autoRegisterTemplate": true,
+          "templateName": "gateway-template",
+          "typeName": "gateway-request-api-log",
+          "numberOfShards": 2,
+          "numberOfReplicas": 1
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithEnvironmentName" ],
+    "Properties": {
+      "Application": "GatewayRequestApi"
     }
   },
   "ConnectionStrings": {
