Committing Azure Connection and Logging Changes

--- a/GatewayRequestApi/appsettings.json
+++ b/GatewayRequestApi/appsettings.json
@@ -8,7 +8,7 @@
         "Name": "Elasticsearch",
         "Args": {
           "nodeUris": "http://gateway-elasticsearch:9200",
-          "indexFormat": "gatewayRequestApi-logs-{0:yyyy.MM.dd}",
+          "indexFormat": "gateway-requestApi-logs-{0:yyyy.MM.dd}",
           "autoRegisterTemplate": true,
           "templateName": "gateway-template",
           "typeName": "gateway-request-api-log",
@@ -24,8 +24,9 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=DADS-LENOVO-LAP\\SQLEXPRESS;Database=Gateway;Integrated Security=True;User ID=DADS-LENOVO-LAP\\thoma;MultipleActiveResultSets=false;TrustServerCertificate=True;"
-    "DefaultConnection": "Data Source={#host};Database={#dbName};Integrated Security=False;User ID=sa;Password={#dbPassword};MultipleActiveResultSets=false;TrustServerCertificate=True;",
-    "EventBus": "-------------------------Azure ServiceBus Key---------------------------"
+    //"DefaultConnection": "Data Source={#host};Database={#dbName};Integrated Security=False;User ID=sa;Password={#dbPassword};MultipleActiveResultSets=false;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qkBjKbAm53hXoA4h36Keg2QdRssYUOvJR+ASbIOzGfo="
   },
   "EventBus": {
     "ProviderName": "ServiceBus", //"RabbitMQ",
