Revert dev elastic config and fix release logs index format

--- a/GatewayRequestApi/appsettings.Development.json
+++ b/GatewayRequestApi/appsettings.Development.json
@@ -7,17 +7,11 @@
       {
         "Name": "Elasticsearch",
         "Args": {
-          "nodeUris": "https://gateway-elastic-deployment.es.uksouth.azure.elastic-cloud.com:9243",
-          "connectionGlobalHeaders": "Authorization=Basic ZWxhc3RpYzp2WjlGTVFjYWxSYU9ZU0NMcmY4TkM4NXY=",
-          "indexFormat": "gateway-requestApi-new-logs-{0:yyyy.MM.dd}",
+          "nodeUris": "http://gateway-elasticsearch:9200",
+          "indexFormat": "gateway-requestApi-logs-{0:yyyy.MM.dd}",
           "autoRegisterTemplate": true,
-          "autoRegisterTemplateVersion": "ESv8",
           "templateName": "gateway-template",
           "typeName": "gateway-request-api-log",
-          "registerTemplateFailure": "IndexAnyway",
-          "batchPostingLimit": 5,
-          "batchAction": "Create",
-          "period": 2,
           "numberOfShards": 2,
           "numberOfReplicas": 1
         }
