--- a/GatewayRequestApi/GatewayRequestApi.csproj
+++ b/GatewayRequestApi/GatewayRequestApi.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="GatewayRequestApi.FunctionalTests"/>
+    <InternalsVisibleTo Include="..\GatewayRequestApi.FunctionalTests\GatewayRequestApi.FunctionalTests.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
