Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
 
   - task: AzureCLI@2
     inputs:
-      azureSubscription: '<Your_Azure_Service_Connection>'
+      azureSubscription: 'thomas-hatton-VS-enterprise-sub-sc'
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
