--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
         uses: azure/pipelines/actions/trigger-pipeline@v1
         with:
           azure-devops-project-url: ${{ secrets.AZURE_DEVOPS_PROJECT_URL }}
-          pipeline-name: 'Your Release Pipeline Name'
+          pipeline-name: 'thattonBL.GatewayRequestApi'
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }}
