Added Environment vars for all connection strings
- To enable depolyment time variable insetion all connection strings can now be Environment Vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
         environment:
           - DB_HOST=gateway-db
           - DB_NAME=Gateway
+          - DB_USER=sa
           - DB_SA_PASSWORD=password@12345#
           - MSG_HOST=gateway-rabbitmq
         networks:
