--- a/GatewayRequestApi/appsettings.json
+++ b/GatewayRequestApi/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DADS-LENOVO-LAP\\SQLEXPRESS;Database=Gateway;Integrated Security=True;User ID=DADS-LENOVO-LAP\\thoma;MultipleActiveResultSets=false;TrustServerCertificate=True;"
-    //"DefaultConnection": "Data Source={#host};Database={#dbName};Integrated Security=False;User ID=sa;Password={#dbPassword};MultipleActiveResultSets=false;TrustServerCertificate=True;",
-    "DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server={#host};Initial Catalog={#dbName};Persist Security Info=False;User ID={#dbUser};Password={#dbPassword};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qkBjKbAm53hXoA4h36Keg2QdRssYUOvJR+ASbIOzGfo=",
     "ApplicationInsightConnectionString": "--placeholderforapplicationisightconnectionstring--"
   },
