Changes to how we get the connection strings to facilitate IAC provisioning
- Change defining Connection String parts to simply having the whole connection string as the Environment var

--- a/GatewayRequestApi/appsettings.json
+++ b/GatewayRequestApi/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "DefaultConnection": "Server={#host};Initial Catalog={#dbName};Persist Security Info=False;User ID={#dbUser};Password={#dbPassword};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qkBjKbAm53hXoA4h36Keg2QdRssYUOvJR+ASbIOzGfo=",
     "ApplicationInsightConnectionString": "--placeholderforapplicationisightconnectionstring--"
   },
