--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,10 +88,8 @@ services:
           - gatewaydb
           - gatewayrabbitmq
         environment:
-          - DB_HOST=gateway-db
-          - DB_NAME=Gateway
-          - DB_USER=sa
-          - DB_SA_PASSWORD=password@12345#
+          - SQL_DB_CONNECTION_STRING=Data Source=gateway-db;Database=Gateway;Integrated Security=False;User ID=sa;Password=password@12345#;MultipleActiveResultSets=false;TrustServerCertificate=True;
+          - APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=3d0b0fff-29cb-4263-8ff9-380e6d7d31b9;IngestionEndpoint=https://uksouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://uksouth.livediagnostics.monitor.azure.com/;ApplicationId=2d0bdcb7-1f3c-4212-83aa-c381d4125727;
           - MSG_HOST=gateway-rabbitmq
         networks:
           - gatewaynetwork
