--- a/GatewayRequestApi/appsettings.Development.json
+++ b/GatewayRequestApi/appsettings.Development.json
@@ -24,10 +24,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DADS-LENOVO-LAP\\SQLEXPRESS;Database=Gateway;Integrated Security=True;User ID=DADS-LENOVO-LAP\\thoma;MultipleActiveResultSets=false;TrustServerCertificate=True;",
-    "EventBus": "-------------------------Azure ServiceBus Key---------------------------"
+    "EventBus": "-------------------------Azure ServiceBus Key---------------------------",
+    "ApplicationInsightConnectionString": "InstrumentationKey=2093ef41-3e75-4d26-ba40-125c1c5256d9;IngestionEndpoint=https://uksouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://uksouth.livediagnostics.monitor.azure.com/;ApplicationId=ad476409-3c05-45c8-b76d-dfaebb425efc"
   },
   "EventBus": {
-    "ProviderName": "ServiceBus", //"RabbitMQ",
+    "ProviderName": "RabbitMQ",
     "SubscriptionClientName": "gateway_integration_evts",
     "Username": "guest",
     "Password": "guest",
