--- a/GatewayRequestApi/appsettings.json
+++ b/GatewayRequestApi/appsettings.json
@@ -13,7 +13,8 @@
     "Port": 5672,
     "RetryCount": 5,
     "GlobalIntegrationRoutingKey": "#.IntegrationEvent",
-    "GlobalIntegrationQueueName": "gateway_global_integration_evts"
+    "GlobalIntegrationQueueName": "gateway_global_integration_evts",
+    "HealthCheckTopicName": "rsimessagepublished.integrationevent"
   },
   "AllowedHosts": "*"
 }
