--- a/GatewayRequestApi/nuget.config
+++ b/GatewayRequestApi/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="Gateway_Nuget_Feed" value="https://pkgs.dev.azure.com/BritishLibrary-AppDev/Gateway/_packaging/Gateway_Nuget_Feed/nuget/v3/index.json" />
   </packageSources>
 </configuration>
