--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -32,7 +32,7 @@ jobs:
       # Step 4: Push Docker image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-request-api:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-request-api:develop
 
       # Step 5: Trigger Azure Release Pipeline
       - name: Trigger Azure DevOps Pipeline
