Update azure-pipelines.yml for Azure Pipelines
Pipeline Fix for AB#378 actually using the variable which switched the tag for which version of the container to deploy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
       echo "Determining Azure subscription..."
       if [ "$(Build.SourceBranchName)" = "development" ]; then
         echo "##vso[task.setvariable variable=AZURE_SUBSCRIPTION]Dev-Gateway-Resources-MS"
+        echo "##vso[task.setvariable variable=DOCKER_IMAGE]attonbomb/gateway-request-api:dev"
       else
         echo "##vso[task.setvariable variable=AZURE_SUBSCRIPTION]Gateway-Resources-IAC-MI-Conn-2"
       fi
@@ -35,9 +36,9 @@ steps:
         az config set extension.use_dynamic_install=yes_without_prompt
         # Update the Azure Container App to pull the latest image
         az containerapp update \
-          --name gateway-request-api-iac
-          --resource-group Gateway-IAC-Resources
-          --image attonbomb/gateway-request-api:latest
+          --name gateway-request-api-iac \
+          --resource-group Gateway-IAC-Resources \
+          --image $(DOCKER_IMAGE) \
           --registry-server hub.docker.com
 
         echo "Container App updated successfully"
