--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Step 5: Run Unit Tests
       - name: Run Unit Tests
-        run: dotnet test GatewayRequestApi.UnitTests/GatewayRequestApi.UnitTests.csproj --no-build --verbosity normal
+        run: dotnet test GatwayRequestApi.UnitTests/GatwayRequestApi.UnitTests.csproj --no-build --verbosity normal
 
       # Step 6: Restore Dependencies for Functional Tests
       - name: Restore dependencies for Functional Tests
