--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Step 5: Run Unit Tests
       - name: Run Unit Tests
-        run: dotnet test GatwayRequestApi.UnitTests/GatwayRequestApi.UnitTests.csproj --verbosity normal
+        run: dotnet test GatwayRequestApi.UnitTests/GatwayRequestApi.UnitTests.csproj --logger "trx;LogFileName=unit-test-results.trx" --verbosity normal
 
       # Step 6: Restore Dependencies for Functional Tests
       - name: Restore dependencies for Functional Tests
@@ -44,47 +44,36 @@ jobs:
 
       # Step 7: Run Functional Tests
       - name: Run Functional Tests
-        run: dotnet test GatewayRequestApi.FunctionalTests/GatewayRequestApi.FunctionalTests.csproj --verbosity normal
+        run: dotnet test GatewayRequestApi.FunctionalTests/GatewayRequestApi.FunctionalTests.csproj --logger "trx;LogFileName=functional-test-results.trx" --verbosity normal
 
-      # Step 6: Install xUnit Viewer
-      - name: Install xUnit Viewer
-        run: npm install -g xunit-viewer
-
-      # Step 7: Generate Test Report for Unit Tests
-      - name: Generate Unit Test Report
-        run: xunit-viewer -r unit-test-results.trx -o unit-test-report.html
-
-      # Step 8: Generate Test Report for Functional Tests
-      - name: Generate Functional Test Report
-        run: xunit-viewer -r functional-test-results.trx -o functional-test-report.html
-
-      # Step 9: Upload Reports as Artifacts
-      - name: Upload Test Reports
-        uses: actions/upload-artifact@v3
+      # Step 8: Upload Test Results with Test Reporter
+      - name: Upload Test Results
+        uses: dorny/test-reporter@v1
         with:
-          name: test-reports
+          name: Unit and Functional Tests
           path: |
-            unit-test-report.html
-            functional-test-report.html
+            unit-test-results.trx
+            functional-test-results.trx
+          reporter: dotnet-trx
 
-      # Step 10: Login to Docker Hub
+      # Step 9: Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      # Step 11: Build the Docker image
+      # Step 10: Build the Docker image
       - name: Build Docker image
         run: |
           docker build --build-arg AZURE_DEVOPS_PAT=${{ secrets.AZURE_DEVOPS_PAT }} -t ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-request-api:dev -f GatewayRequestApi/Dockerfile .
 
-      # Step 12: Push Docker image to Docker Hub
+      # Step 11: Push Docker image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/gateway-request-api:dev
 
-      # Step 13: Trigger Azure Release Pipeline
+      # Step 12: Trigger Azure Release Pipeline
       - name: Trigger Azure DevOps Pipeline
         uses: Azure/pipelines@v1.2
         with:
